<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Application</string>
    <string name="toolbar_title_in_login_page_key">LOG IN TO WATCH</string>
    <string name="unlock_with_face_id_key">Unlock with Face ID</string>
    <string name="unlock_with_touch_id_key">Unlock with Touch ID</string>
    <string name="email_key">Email</string>
    <string name="password_key">Password</string>
    <string name="forgot_password_key">Forgot Password</string>
    <string name="login_key">Log in</string>
    <string name="do_have_an_account_key">Do have an account?</string>
    <string name="register_key">Register</string>
    <string name="toolbar_title_in_register_key">JOIN THE COMMUNITY</string>
    <string name="first_name_key">First name</string>
    <string name="last_name_key">Last name</string>
    <string name="phone_number_key">Phone number</string>
    <string name="country_picker_hint_key">Search country</string>
    <string name="search_country_key">Search country</string>
    <string name="helper_text_key">* Min. 8 Letters, 1 Uppercase, 1 Number, 1 Special Character</string>
    <string name="confirm_password_key">Confirm password</string>
    <string name="accept_the_key">I Accept the </string>
    <string name="terms_conditions_key">Terms &amp; Conditions</string>
    <string name="join_key">Join</string>
    <string name="accept_terms_conditions_key"><![CDATA[Accept the Terms & Conditions for registration]]></string>
    <string name="toolbar_title_in_forgot_pass_key">FORGOT PASSWORD</string>
    <string name="confirm_pass_key">Confirm your email/phone number and we’ll send 6-digit code to verify</string>
    <string name="email_or_phone_number_key">Email/Phone Number</string>
    <string name="send_code_again_key">Send Code Again</string>
    <string name="request_code_key">Request Code</string>
    <string name="invalid_email_or_phone_key">One of the fields is incorrect or invalid.</string>
    <string name="enter_email_or_phone_error_key">Enter email/phone number to get code</string>
    <string name="one_last_step_to_access_your_profile_key">One last step to access your profile</string>
    <string name="new_password_key">New Password</string>
    <string name="toolbar_title_in_set_new_pass">SET NEW PASSWORD</string>
    <string name="complete_key">Complete</string>
    <string name="congratulations_key">Congratulations</string>
    <string name="password_successfully_setup_key">Your password was successfully setup</string>
    <string name="some_button_key">Some Button</string>
    <string name="some_title_key">Some title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_key">Search</string>
    <string name="friends_key">Friends</string>
    <string name="recommended_key">Recommended</string>
    <string name="top_10_key">top 10</string>
    <string name="trending_now_key">Trending now</string>
    <string name="recently_added_key">Recently added</string>
    <string name="filter_type_key">Some key</string>
    <string name="name_of_movie_key">Name Of Movie</string>
    <string name="mystery_key">Mystery</string>
    <string name="posted_data_key">2021 2h 20m</string>
    <string name="some_discount_key">some %</string>
    <string name="selected_key">Selected</string>
    <string name="nothing_found_key">Nothing found</string>
    <string name="event_name_key">Event name</string>
    <string name="event_description_key">Event description</string>
    <string name="start_date_and_time_key">Start date and time</string>
    <string name="plus_end_date_and_time_key">+ End date and time</string>
    <string name="add_members_key">Add members</string>
    <string name="choose_friends_key">Choose friends or invite by email</string>
    <string name="next_key">Next</string>
    <string name="private_key">Private</string>
    <string name="people_are_invited_key">Only people who are invited</string>
    <string name="public_key">Public</string>
    <string name="public_undertitle_key">Anyone on or off QR Flix</string>
    <string name="save_key">Save</string>
    <string name="some_date_key">7 June at 11:00</string>
    <string name="end_time_key">+ End time</string>
    <string name="type_name_hint_key">Type name and choose</string>
    <string name="add_friends_key">Add Friends</string>
    <string name="invite_by_email_key">Invite by Email</string>
    <string name="enter_email_key">Enter Email</string>
    <string name="total_to_pay_key">total to pay</string>
    <string name="money_450_key">$ 450 (15 people)</string>
    <string name="enter_coupon_code_key">ENTER COUPON CODE</string>
    <string name="apply_key">Apply</string>
    <string name="qr_flix_members_key">QR Flix members</string>
    <string name="grand_total_key">Grand Total</string>
    <string name="make_a_payment_key">Make a Payment</string>
    <string name="upload_cover_key">upload cover</string>
    <string name="end_date_and_time_key">End date and time</string>
    <string name="name_key">Name</string>
    <string name="search_event_key">Search event</string>
    <string name="view_key">View</string>
    <string name="accept_key">Accept</string>
    <string name="decline_key">Decline</string>
    <string name="leave_event_key">leave event</string>
    <string name="sort_by_key">sort by</string>
    <string name="from_date_key">From date</string>
    <string name="to_date_key">To date</string>
    <string name="download_list_is_empty_key">Your download list is empty.</string>
    <string name="start_exploring_text">Start exploring and download your favorite movies and shows.</string>
    <string name="explore_key">explore</string>
    <string name="yes_delete_key">Yes, delete</string>
    <string name="are_you_delete_downloaded_key">Are you sure want to delete from Download?</string>
    <string name="cannot_download_video_key">Cannot Download Video.</string>
    <string name="enough_available_storage_key">There is not enough available storage to download video.</string>
    <string name="no_result_found_key">No result found</string>
    <string name="try_adjusting_search_key">Try adjusting your search or filter to find what you’re looking for.</string>
    <string name="year_key">Year</string>
    <string name="enter_year_key">Enter year</string>
    <string name="runtime_key">runtime</string>
    <string name="hours_key">Hours</string>
    <string name="minutes_key" tools:ignore="ExtraTranslation">Minutes</string>
    <string name="enter_phone_or_email_key">Enter phone number or email</string>
    <string name="found_in_qrflix_key">found in qrflix</string>
    <string name="add_key">Add</string>
    <string name="contact_list_key">contact list</string>
    <string name="all_friends_key">All Friends</string>
    <string name="want_to_delete_request_key">Are you sure want to delete request?</string>
    <string name="accepted_key">Accepted</string>
    <string name="new_payment_method_key">New Payment Method</string>


</resources>