<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_1"
    android:orientation="vertical"
    tools:context=".CreateEvent.EventDetailsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingBottom="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/account_status_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/forgot_pass_code_bg"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="2"
                tools:listitem="@layout/item_choose_privacy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_friends_tv"
                style="@style/TextWhite14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_friends_key"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_status_rv" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutWithPrefixStyle"
                android:id="@+id/event_name_layout"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                app:prefixText="@string/name_key"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/add_friends_tv">
            <EditText
                android:id="@+id/event_name_edt"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/edit_text_bg_with_grey_border"
                android:hint="@string/type_name_hint_key"
                app:layout_constraintTop_toBottomOf="@id/add_friends_tv" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_img"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/background_choose_country_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_name_layout" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/invite_by_email_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/icon_img">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_by_email_key" />


                <!--///////////////////////////////////////Here must be end icon//////////////////////////-->

                <EditText
                    android:id="@+id/email_edt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/edit_text_bg_with_grey_border"
                    android:drawableEnd="@drawable/icon_send_invite"
                    android:hint="@string/enter_email_key" />


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_with_user_image_and_email_with_close_icon" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/accent_5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextWhite14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_to_pay_key"
                        android:textAlignment="center"
                        app:textAllCaps="true" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextWhite16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/money_450_key"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                style="@style/MainRedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="40dp"
                android:text="@string/save_key"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/invite_by_email_constraint" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/accent_4"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/save_btn"
                tools:itemCount="10"
                tools:listitem="@layout/item_with_user_name_and_image" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>