<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_1"
    android:orientation="vertical"
    tools:context=".CreateEvent.EventDetailsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/code_edt"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/forgot_pass_code_bg"
                android:hint="@string/enter_coupon_code_key"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply_btn"
                style="@style/MainRedButtonStyle"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:backgroundTint="@color/accent_2"
                android:text="@string/apply_key"
                app:layout_constraintBottom_toBottomOf="@id/code_edt"
                app:layout_constraintEnd_toEndOf="@id/code_edt"
                app:layout_constraintTop_toTopOf="@id/code_edt" />

            <GridLayout
                android:id="@+id/payment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/accent_3"
                android:columnCount="2"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/code_edt">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/members_tv"
                    style="@style/TextLightGrey12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/qr_flix_members_key" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_tv"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="end"
                    android:text="@string/money_450_key"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/grey_line_view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/dotted_line" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/members_by_email_tv"
                    style="@style/TextLightGrey12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_marginTop="10dp"
                    android:text="@string/invite_by_email_key" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/members_by_email_price_tv"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/money_450_key"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/all_price_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/forgot_pass_code_bg"
                    android:backgroundTint="@color/accent_1"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/all_price_title_tv"
                        style="@style/TextWhite14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:gravity="center"
                        android:text="@string/grand_total_key"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/all_price_tv"
                        style="@style/TextWhite14"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:text="@string/money_450_key"
                        android:textStyle="bold" />
                </LinearLayout>
            </GridLayout>

            <RelativeLayout
                android:id="@+id/card_choose_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/forgot_pass_code_bg"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp"
                app:layout_constraintTop_toBottomOf="@id/payment_layout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/payment_img"
                    android:layout_width="40dp"
                    android:layout_height="26dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_red_ball" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/number_tv"
                    style="@style/TextWhite14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/payment_img"
                    android:text="@string/some_title_key" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_tv"
                    style="@style/TextLightGrey12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/number_tv"
                    android:layout_alignStart="@id/number_tv"
                    android:text="@string/some_date_key" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/payment_method_ib"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icon_bottom_arrow" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/make_payment_btn"
                style="@style/MainRedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_a_payment_key"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_choose_layout"
                app:layout_constraintVertical_bias="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>